enterprise/operator/pkg/lb/testdata/gwapi_translation/basic-http/input-gateway.yaml
kind: Gateway
metadata:
  creationTimestamp: null
  name: my-gateway
  namespace: default
spec:
  gatewayClassName: ""
  infrastructure:
    annotations:
      internal-loadbalancer-annotation: "true"
    labels:
      internal-loadbalancer-label: "true"
  listeners:
    - name: prod-web-gw
      port: 80
      protocol: HTTP
status: {}
