enterprise/operator/pkg/lb/testdata/gwapi_translation/basic-http/input-gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: ilbgateway
spec:
  controllerName: io.isovalent/gateway-controller
  description: The default Isovalent LB GatewayClass
