enterprise/operator/pkg/lb/testdata/gwapi_translation/basic-http/input-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-app-1
  namespace: default
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: my-gateway
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: webapp
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
